--- a/store/templates/selecteditems.html
+++ b/store/templates/selecteditems.html
@@ -22,7 +22,7 @@
                             Cart
                         </span>
                         <div class="cart-update">
-                            4
+                            <span class=cart-updates>4</span>
                         </div>
                     </div>
                     <div class="favorites">
@@ -39,8 +39,29 @@
                 </div>
             </nav>
             <div class="category">
-
+                <span class="v-category1">Men</span>
+                <span class="v-category">Sports</span>
+                <span class="v-category">Brands</span>
+                <span class="v-category">New</span>
+                <span class="v-category active">Sale</span>
             </div>
         </header>
+        <div class="product-info">
+            <div class="product-pics">
+                <div class="largeview">
+                    <img src="../static/images/bracelet.jpg">
+                </div>
+                <div class="small-view">
+                    <div class="small-1 active"><img src="../static/images/bracelet.jpg"></div>
+                    <div class="small-1"><img src="../static/images/bracelet2.jpg"></div>
+                    <div class="small-1"><img src="../static/images/bracelet3.jpg"></div>
+                    <div class="small-1"><img src="../static/images/bracelet5.jpg"></div>
+                    <div class="small-1"><img src="../static/images/bracelet.jpg"></div>
+                </div>
+            </div>
+            <div class="info">
+                <p>the boy is good apa lon jebe, i came i saw and i conquer</p>
+            </div>
+        </div>
     </body>
 </html>
