--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -39,7 +39,7 @@
         </div>
     </header>
     <nav class="categories">
-        <span class="categories-name1">New In</span>
+        <span class="categories-name active">New In</span>
         <span class="categories-name">Designers</span>
         <span class="categories-name">Sunglasses</span>
         <span class="categories-name">Clothing Materials</span>
