--- a/store/static/styles/selected.css
+++ b/store/static/styles/selected.css
@@ -8,6 +8,11 @@
 }
 
 @font-face {
+    font-family: myFont2;
+    src: url(Futura_Medium/FuturaMedium.otf);
+}
+
+@font-face {
     font-family: myFont;
     src: url(Quesha.ttf);
 }
@@ -142,7 +147,7 @@ body {
 .product-info {
     display: flex;
     width: 100%;
-    height: 500px;
+    height: 450px;
     margin-top: 130px;
     padding:  0 30px;
 }
@@ -191,4 +196,73 @@ body {
 }
 .info {
     margin-left: 50px;
+    width: 50%;
+    height: 100%;
+    display: block;
+    border: 1px solid pink;
+}
+.info .brandname {
+    display: flex;
+    width: 100%;
+}
+.info .brandname .brand {
+    font-size: 14px;
+    color: black;
+    background: white;
+    font-weight: 600;
+}
+.info .product-desc {
+    display: flex;
+    width: 100%;
+    padding: 10px 0;
+    font-size: 30px;
+    font-weight: 600;
+    font-family: myFont2;
+}
+.info .price {
+    display: flex;
+    width: 100%;
+    font-size: 35px;
+    font-weight: 600;
+    font-family: myFont2;
+    padding-bottom: 10px;
+}
+
+.info .product-color{
+    display: flex;
+    width: 100%;
+    font-size: 12px;
+    color: rgb(192, 190, 190);
+}
+.info .product-color .col1 {
+    display: flex;
+    font-size: 14px;
+    font-family: myFont2;
+    font-weight: 600;
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+.info .product-color .active {
+    color: black;
+}
+.size {
+    display: block;
+    width: 100%;
+} 
+.size .size-btn {
+    width: 80%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+}
+.size .size-btn  .size-button{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    border: 1px solid rgb(235, 231, 231);
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-weight: 600;
 }
