--- a/store/templates/selecteditems.html
+++ b/store/templates/selecteditems.html
@@ -60,7 +60,38 @@
                 </div>
             </div>
             <div class="info">
-                <p>the boy is good apa lon jebe, i came i saw and i conquer</p>
+                <div class="brandname"><span class="brand">Versace</span></div>
+                <div class="product-desc">Versace Gold Bracelet</div>
+                <div class="price">&#8358;199.00</div>
+                <div class="product-color">
+                    <span class="col1 active">Gold</span>
+                     <span class="col1">&#x2022;</span> 
+                     <span class="col1">Silver</span>
+                </div>
+                <div class="size">
+                    <span class="size-name">Size &#x2022; cms</span>
+                    <div class="size-btn">
+                        <div class="size-button">40.5</div>
+                        <div class="size-button">41</div>
+                        <div class="size-button">42</div>
+                        <div class="size-button">43</div>
+                        <div class="size-button">43.5</div>
+                        <div class="size-button">44</div>
+                        <div class="size-button">44.5</div>
+                        <div class="size-button">45</div>
+                        <div class="size-button">46</div>
+                    </div>
+                    <span class="size-info">Only size</span>
+                </div>
+                <div class="add-cart">
+                    <div class="add-btn">
+                        <div class="add-cart-btn"><i class='bx bxs-shopping-bag-alt'></i> Add cart</div>
+                        <div class="favit"><i class='bx bx-heart'></i></div>
+                    </div>
+                    <div class="delivery-info">
+                        <span class="del-info"><i class='bx bxs-truck'></i> Free delivery on orders over &#8358;100.0</span>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
