--- a/store/templates/selecteditems.html
+++ b/store/templates/selecteditems.html
@@ -64,12 +64,16 @@
                 <div class="product-desc">Versace Gold Bracelet</div>
                 <div class="price">&#8358;199.00</div>
                 <div class="product-color">
-                    <span class="col1 active">Gold</span>
+                    <span class="col1 active">Color</span>
                      <span class="col1">&#x2022;</span> 
-                     <span class="col1">Silver</span>
+                     <span class="col1">Gold</span>
                 </div>
                 <div class="size">
-                    <span class="size-name">Size &#x2022; cms</span>
+                    <div class="size-name">
+                        <span class="col2 active">Size</span>
+                         <span class="col2">&#x2022;</span> 
+                         <span class="col2">Cm's</span>
+                    </div>
                     <div class="size-btn">
                         <div class="size-button">40.5</div>
                         <div class="size-button">41</div>
@@ -81,11 +85,11 @@
                         <div class="size-button">45</div>
                         <div class="size-button">46</div>
                     </div>
-                    <span class="size-info">Only size</span>
+                    <span class="size-info">Size guide</span>
                 </div>
                 <div class="add-cart">
                     <div class="add-btn">
-                        <div class="add-cart-btn"><i class='bx bxs-shopping-bag-alt'></i> Add cart</div>
+                        <div class="add-cart-btn"><i class='bx bx-shopping-bag'></i> Add to cart</div>
                         <div class="favit"><i class='bx bx-heart'></i></div>
                     </div>
                     <div class="delivery-info">
