--- a/store/templates/sellers_upload.html
+++ b/store/templates/sellers_upload.html
@@ -91,10 +91,21 @@
                 <div class="main">
                     <label for="category">Choose a category:</label>
                     <select id="productCategory" name="productCategory" class="the-control" >
-                        <option value="T-shirts">T-shirts</option>
+                        <option value="T-shirts">Sunglasses</option>
+                        <option value="Boots">Clothing Materials</option>
+                        <option value="Men Native">T-shirts</option>
+                        <option value="Tops">Tops</option>
+                        <option value="Pants">Pants</option>
+                        <option value="Acessories">Acessories</option>
+                        <option value="Bags">Bags</option>
+                        <option value="Scents">Scents</option>
+                        <option value="Shoes">Shoes</option>
+                        <option value="Jewelry">Jewelry</option>
+                        <option value="Wrist Watches">Wrist Watches</option>
                         <option value="Boots">Boots</option>
-                        <option value="Men Native">Men Native</option>
-                        <option value="Skin care">Skin care</option>
+                        <option value="Head wears">Head wears</option>
+                        <option value="Slides">Slides</option>
+                        <option value="Palms/Slippers">Palms/Slippers</option>
                         <!-- Add more options as needed -->
                     </select>
                     </div>
