--- a/store/templates/sellers_upload.html
+++ b/store/templates/sellers_upload.html
@@ -130,6 +130,26 @@
                         class="the-control" 
                     />
                     </div>
+                    <div class="main">
+                        <label for="productColor">Enter Product color</label>
+                        <input 
+                            type="text" 
+                            id="productColor" 
+                            name="productColor" 
+                            class="the-control"
+                            placeholder="Enter colors (comma-separated)" 
+                        />
+                    </div>
+                    <div class="main">
+                        <label for="productMeasurment">Enter Product Measurement</label>
+                        <input 
+                            type="text" 
+                            id="productMeasurement" 
+                            name="productMeasurementr" 
+                            class="the-control"
+                            placeholder="Enter measurement (e.g., meters, cm, kg etc)" 
+                        />
+                    </div>
                 <div class="main">
                 <label for="productDescription">Product Description</label>
                 <input 
