--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Shoppers{% endblock %}</title>
+    <title>Shoppers - Homepage</title>
+    <meta name="description" content="Shoppers is an online store for men">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://www.flaticon.com/free-icons/others" >
@@ -62,7 +65,7 @@
     </div>
     <div class="main">
         {% for product in all_product.values() %}
-                    <div class="pics-description" id="{{ product.id }}">
+                    <div class="pics-description" id="{{ product.id }}" seller_id="{{ product.seller_id }}">
                         <div class="images">
                             {% set product_images = all_images.values()|selectattr('product_id', 'equalto', product.id)|list %}
                             {% set product_image = product_images|first %}
@@ -118,5 +121,6 @@
             </div>
         </div>
     </footer>
+    <script src="../static/Scripts/2-store.js"></script> 
 </body>
 </html>
