--- a/store/static/styles/sign_in.css
+++ b/store/static/styles/sign_in.css
@@ -31,6 +31,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
+    position: relative;
 }
 .container {
     margin-top: 100px;
@@ -139,30 +140,54 @@ input:focus {
     justify-content: space-between;
     align-items: center;
 }
-.danger-btn {
-    width: 20px;
-    margin-right: 10px;
-    background: rgb(248, 171, 171);
-    border: none;
-    color: red;
-}
-
-.the-alert-success {
-    width: 100%;
-    height:30px;
+.the-alert-danger {
+    position: absolute;
+    width: 20%;
+    height: 70px;
     display: flex;
     background: white;
     color: black;
+    padding: 10px 10px;
     justify-content: space-between;
-    align-items: center;
+    border-radius: 30px;
+    top: 30%;
+    left: 35%;
+}
+.danger-btn {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    color: black;
+    border: none;
+    background: rgb(243, 241, 241);
+    border-radius: 7px;
+    font-size: 30px;
+}
+
+.the-alert-success {
+    position: absolute;
+    width: 20%;
+    height: 70px;
+    display: flex;
+    background: white;
+    color: black;
+    padding: 10px 10px;
+    justify-content: space-between;
+    border-radius: 30px;
+    top: 30%;
+    left: 35%;
 }
 .close-btn{
-    width: 20px;
+    width: 40px;
+    height: 40px;
     margin-right: 10px;
-    background: rgb(163, 211, 163);
+    color: black;
     border: none;
-    color: green
+    background: rgb(243, 241, 241);
+    border-radius: 7px;
+    font-size: 30px;
 }
+
 @media only screen and (max-width: 767px) {
     .container {
         margin-top: 100px;
