--- a/store/templates/sellers_upload.html
+++ b/store/templates/sellers_upload.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shoppers - Merchants</title>
+    <meta name="description" content="Shoppers is an online store for men">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="../static/styles/sellers_uploads.css">
-    <title>Shoppers Uploads</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -141,11 +144,11 @@
                         />
                     </div>
                     <div class="main">
-                        <label for="productMeasurment">Enter Product Measurement</label>
+                        <label for="productMeasurement">Enter Product Measurement</label>
                         <input 
                             type="text" 
                             id="productMeasurement" 
-                            name="productMeasurementr" 
+                            name="productMeasurement" 
                             class="the-control"
                             placeholder="Enter measurement (e.g., meters, cm, kg etc)" 
                         />
@@ -159,15 +162,6 @@
                     class="the-control" 
                 />
                 </div>
-                <div class="main">
-                <label for="productColor">Product Color</label>
-                <input type="text"
-                    id="productColor"
-                    name="productColor" 
-                    class="the-control"
-                />
-                </div>
-            
                 <div class="main">
                 <label for="productImage">Product Image</label>
                 <input type="file" 
