--- a/store/static/styles/seller-signup.css
+++ b/store/static/styles/seller-signup.css
@@ -31,6 +31,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
+    position: relative;
 }
 .container {
     margin-top: 100px;
@@ -122,37 +123,51 @@ input:focus {
     font-family: fontBold2;
 }
 .the-alert-danger {
-    width: 100%;
-    height:30px;
+    position: absolute;
+    width: 20%;
+    height: 70px;
     display: flex;
     background: white;
     color: black;
+    padding: 10px 10px;
     justify-content: space-between;
-    align-items: center;
+    border-radius: 30px;
+    top: 30%;
+    left: 35%;
 }
 .danger-btn {
-    width: 20px;
+    width: 40px;
+    height: 40px;
     margin-right: 10px;
-    background: rgb(248, 171, 171);
+    color: black;
     border: none;
-    color: red;
+    background: rgb(243, 241, 241);
+    border-radius: 7px;
+    font-size: 30px;
 }
 
 .the-alert-success {
-    width: 100%;
-    height:30px;
+    position: absolute;
+    width: 20%;
+    height: 70px;
     display: flex;
     background: white;
     color: black;
+    padding: 10px 10px;
     justify-content: space-between;
-    align-items: center;
+    border-radius: 30px;
+    top: 30%;
+    left: 35%;
 }
 .close-btn{
-    width: 20px;
+    width: 40px;
+    height: 40px;
     margin-right: 10px;
-    background: rgb(163, 211, 163);
+    color: black;
     border: none;
-    color: green
+    background: rgb(243, 241, 241);
+    border-radius: 7px;
+    font-size: 30px;
 }
 
 .primary-btn {
